# airca-fractal-decision-architecture

./: .gitignore  ATTRIBUTION.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  README_PRODUCT.md  ROADMAP.md  artifact.json  pyproject.toml  reddit-post-v1.md  sources-and-lineage.md
.github/workflows/: airca-demo.yml  airca-publish.yml  validate.yml
airca/: artifacts.py  cli.py  engine.py  learning.py  models.py  publish.py  publish_cli.py
docs/: README.md  architecture-diagram-mermaid-detailed.md  architecture-diagram-mermaid.md  architecture-diagram-notes-v1.md  competition-and-positioning.md  decision-system-vision.md  fractal-taxonomy-ontology-decision-model.md  game-theory-and-mechanism-design.md  how-to-read-this-repo.md  human-agency-and-cognitive-load.md  intellectual-lineage.md  kozyrkov-decision-intelligence.md  learning-loop.md  practical-use-cases.md  technical-and-conceptual-lineage.md
docs/04-white-papers/: index.md
docs/airca/: README.md  artifact.json  example-machine-readable-airca-artifact.md  lairca-notes-v1.md  lineage.md  notes-v1.md  uairca-notes-v1.md
docs/fractal-decision-making/: README.md  artifact.json  lineage.md  notes-v1.md
docs/fractal-ontology/: README.md  artifact.json  lineage.md  notes-v1.md
docsfractal-taxonomy/: README.md
framework/: README.md
governance/: change-taxonomy.yaml
papers/: README.md
pilots/: README.md
schemas/: airca-decision.schema.json  artifact.schema.json
scripts/: validate_repo.py
templates/: decision-template.md
tests/: test_engine.py  test_publish.py
(+42 files in other folders)
